--- a/static/scss/_variables.scss
+++ b/static/scss/_variables.scss
@@ -157,3 +157,19 @@ $bdr-thin:                1px solid $bdr-thin-color;
 $bdr-thin--lt:            1px solid $bdr-thin-lt-color;
 
 $bdr-med--black:          6px solid $black-100;
+
+
+// --------------------------------------------
+// --------------------------------------------
+//
+// Overrides & Miscellaneous
+//
+// --------------------------------------------
+// --------------------------------------------
+
+$animation-timing: cubic-bezier(0.645,0.045,0.355,1);
+
+
+
+
+
