--- a/static/scss/components/_tease-list-latest.scss
+++ b/static/scss/components/_tease-list-latest.scss
@@ -17,7 +17,7 @@
 
 .hp-list-item {
   font-size: 26px;
-  line-height: 1.230769231;   //32/26
+  line-height: 1.1;
   position: relative;
   & + & {
     margin-top: 0.85em;
