--- a/static/scss/pages/_search.scss
+++ b/static/scss/pages/_search.scss
@@ -11,13 +11,15 @@
 
 
 .search-page-text-input {
+  // Follows style from navigation
+  // search-text-input
+  @include input-default;
   width: 100%;
-  height: 60px;
-  border: none;
-  padding: 0 0 0 20px;
+  height: 61px;
+  padding: 6px 63px 10px 14px;
   margin-top: 0px;
   background-color: $black;
-  color: white;
+  color: #fff;
   font-family: $he-sans;
   font-size: 30px;
   font-weight: $font-weight-bold;
@@ -33,9 +35,16 @@
     outline: none;
   }
 
+  @include placeholder-state(
+      rgba(255,255,255,.4), // default
+      rgba(255,255,255,.4), // hover
+      rgba(255,255,255,.7)  // focus
+  );
+
+
   @include mq($bp-medium) {
     height: 90px;
-    padding: 0 0 0 30px;
+    padding: 4px 96px 10px 28px;
     font-size: 40px;
   }
 }
@@ -54,20 +63,26 @@ input:-webkit-autofill:focus {
 
 
 .search-page-submit-button {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  border: none;
-  padding: 30px;
-  margin-top: 0px;
+  // Follows style from navigation
+  // search-submit-button
+  @include input-default;
+  @include absolute(0 0 0 n);
   display: block;
-  width: 100px;
+  width: 60px;
+  margin-top: 0px;
+  padding: 17px;
   background-color: $black;
 
-  @include mq($bp-medium, max) {
-    width: 60px;
-    padding: 17px;
+  @include mq($bp-medium) {
+    width: 90px;
+    padding: 30px;
+  }
+
+  .icon-search-reverse .icon {
+    width: 30px;
+    height: 30px;
+    margin-top: -15px;
+    margin-left: -15px;
   }
 }
 
